roughed in bugbox modal for keeping track of 'caught monsters'

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -4,11 +4,11 @@
       PaleoGo: Florissant
     </ion-title>
     <ion-buttons end>
-      <button ion-button (click)="addMarker()"><ion-icon name="add"></ion-icon> Add Markers</button>
+      <button ion-button (click)="bugBox()"><ion-icon name="cube"></ion-icon><span class="btn-text">Bug Box</span></button>
     </ion-buttons>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
-  <div #map id="map">I might be a map someday</div> 
+  <div #map id="map"></div> 
 </ion-content>
