Added tabs - menu nav - page stubs for different app sections

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,5 +1,27 @@
 <ion-header>
   <ion-navbar>
+
+    <button ion-button menuToggle icon-only>
+      <ion-icon name="menu"></ion-icon>
+    </button>
+
+    <ion-menu [content]="menucontent">
+      <!--<ion-content>
+        <ion-list>
+          <button ion-button ion-item>Find Specimens</button>
+          <button ion-button ion-item>Bug Box</button>
+          <button ion-button ion-item>Settings</button>
+          <button ion-button ion-item>About</button>
+          <button ion-button ion-item>Credits</button>
+         
+        </ion-list>
+      </ion-content>-->
+    </ion-menu>
+
+    <!--<ion-nav #menucontent [root]="homePage"></ion-nav>-->
+
+
+
     <ion-title>
       PaleoGo: Florissant
     </ion-title>
@@ -7,8 +29,10 @@
     <ion-buttons end>
       <button ion-button (click)="bugBox()"><ion-icon name="cube"></ion-icon><span class="btn-text">Bug Box</span></button>
     </ion-buttons>
+
   </ion-navbar>
 </ion-header>
+
 
 <ion-content padding>
   <div #map id="map"></div> 
