Credits Page content stub, fixed catch screen modal Ionic/Angular config
:

--- a/src/pages/settings/settings.html
+++ b/src/pages/settings/settings.html
@@ -15,4 +15,18 @@
 
 <ion-content padding>
 
+  <ion-list>
+
+    <ion-item>
+      <ion-label>Offline Data</ion-label>
+      <ion-toggle></ion-toggle>
+    </ion-item>
+
+    <ion-item>
+      <ion-label>Background GPS</ion-label>
+      <ion-toggle></ion-toggle>
+    </ion-item>
+
+  </ion-list>
+
 </ion-content>
