--- a/src/pages/credits/credits.html
+++ b/src/pages/credits/credits.html
@@ -13,6 +13,18 @@
 </ion-header>
 
 
-<ion-content padding>
+<ion-content padding text-center>
+
+  <h3>Partners</h3>
+  <p>Partner Institutions to come</p>
+
+
+  <img style="height:80px; width:80px; margin: auto; display:block;" src="assets/nsf.png"/>
+
+  <h3>This project made possible by National Science Foundation Award EF XXXXXXX</h3>
+  <p>
+     "Any opinions, findings, and conclusions or recommendations expressed in this material are those of the author(s) and do not necessarily
+     reflect the views of the National Science Foundation."
+  </p>
 
 </ion-content>
