added NSF award number

--- a/src/pages/credits/credits.html
+++ b/src/pages/credits/credits.html
@@ -21,7 +21,7 @@
 
   <img style="height:80px; width:80px; margin: auto; display:block;" src="assets/nsf.png"/>
 
-  <h3>This project made possible by National Science Foundation Award EF XXXXXXX</h3>
+  <h3>This project made possible by National Science Foundation Award EF 1305066</h3>
   <p>
      "Any opinions, findings, and conclusions or recommendations expressed in this material are those of the author(s) and do not necessarily
      reflect the views of the National Science Foundation."
