--- a/src/pages/home/modal.html
+++ b/src/pages/home/modal.html
@@ -11,15 +11,10 @@
 
 <ion-content padding text-center>
 
-  <div id="catch-screen">
   <h2>{{monster.name}}</h2>
-  <img src="{{monster.icon}}">
+  <canvas #theCanvas class="canvasStyle" id="catch"></canvas>
 
-
-  <img id="hammer-img" src="assets/hammer.svg" on-drag="onDrag()" on-tap="onTap('hammer-img')">
-  </div>
-
-  <div id="caught-screen">
+  <div id="caught-screen" style="display: none;">
   
     <h2>Congrats you caught {{monster.name}}</h2>
     <img src="{{monster.icon}}">
@@ -27,6 +22,16 @@
     <button ion-button (click)="dismiss()"><ion-icon name="close"></ion-icon><span class="btn-text">Cancel</span></button>
 
   </div>
+
+  <!--<div id="catch-screen">
+  <h2>{{monster.name}}</h2>
+  <img src="{{monster.icon}}">
+
+
+  <img id="hammer-img" src="assets/hammer.svg" on-drag="onDrag()" on-tap="onTap('hammer-img')">
+  </div>
+
+  -->
 
 
 
