HTML5 Canvas progress, success page, privacy stub

--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -20,6 +20,7 @@
     <button ion-item (click)="about()"><ion-icon name="information-circle"></ion-icon> About</button>
     <button ion-item (click)="account()"><ion-icon name="person"></ion-icon> My Account</button>
     <button ion-item (click)="credits()"><ion-icon name="bookmark"></ion-icon> Credits</button>
+    <button ion-item (click)="privacy()"><ion-icon name="lock"></ion-icon> Privacy</button>
   </ion-list>
 
 </ion-content>
