--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -22,7 +22,7 @@
 </ion-content>
 
 <ion-footer>
-  <ion-toolbar>
+  <!--<ion-toolbar>
     <ion-row>
       <ion-col text-center>
         <button ion-button>
@@ -42,6 +42,6 @@
         </button>
       </ion-col>
     </ion-row>
-  </ion-toolbar>
+  </ion-toolbar>-->
 
 </ion-footer>
